# dedupe

./: Cargo.toml  README.md  USAGE.md  config.example.yaml
benches/: parallel_pipeline.rs
docs/: OVERVIEW.md  STREAMING_WALKER.md
examples/: streaming_demo.rs
src/: README.md  cli.rs  config.rs  lib.rs  main.rs  test_utils.rs  types.rs  walker.rs  walker_hp.rs  walker_parallel.rs  walker_simple.rs  walker_streaming.rs
src/pipeline/: hash.rs  metadata.rs  mod.rs  parallel.rs  quick_check.rs  stats.rs  streaming.rs  streaming_hash.rs  streaming_metadata.rs  streaming_quickcheck.rs  streaming_statistical.rs  thread_pool.rs
src/report/: mod.rs
src/report/formatters/: csv.rs  json.rs  mod.rs  text.rs
src/tests/: mod.rs  streaming_test.rs
src/utils/: error.rs  mod.rs  progress.rs
tests/: config_test.rs  multithreading_test.rs  phase4_test.rs  pipeline_stage_test.rs  pipeline_test.rs  report_test.rs  streaming_walker_test.rs  walker_test.rs
tests/fixtures/data/: dupes.json
tests/fixtures/data/stages/: duplicate_one.txt  unique.txt
