[package]
name = "dedupe"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Schultz"]
description = "A high-performance file deduplication tool"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
camino = "1.1"
infer = "0.15"
indicatif = "0.17"
fs_extra = "1.3"
async-trait = "0.1"
num_cpus = "1.16"
