[package]
name = "dedupe"
version = "0.1.0"
edition = "2021"
authors = ["Vadim Schultz"]
description = "A high-performance file deduplication tool"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
camino = { version = "1.1", features = ["serde1"] }
infer = "0.15"
indicatif = "0.17"
fs_extra = "1.3"
async-trait = "0.1"
num_cpus = "1.16"
config = "0.13"
rstest = "0.18"

indexmap = "2.11.4"
blake3 = "1.8.2"
bytesize = "2.1.0"
smallvec = "1.15.1"
futures = "0.3.31"
crossbeam-channel = "0.5"
async-stream = "0.3"

# Multi-threading dependencies (Phase 3)
rayon = "1.8"
parking_lot = "0.12"
tokio-metrics = "0.3"
fastrand = "2.0"
criterion = { version = "0.5", optional = true }

# Phase 4 dependencies - Additional Stages
memmap2 = "0.9"
statrs = "0.17"  
proptest = { version = "1.4", optional = true }

# Report generation dependencies (Phase 6 partial)
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1.17"

[features]
default = []
benchmarks = ["criterion"]
testing = ["proptest"]

[[bench]]
name = "parallel_pipeline"
harness = false
required-features = ["benchmarks"]

[[example]]
name = "streaming_demo"
path = "examples/streaming_demo.rs"

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.1"
tempfile = "3.8"
rstest = "0.18"
criterion = "0.5"
loom = "0.7"
